# OS-Scheduler

./: CMakeLists.txt
include/: model.h  parser.h
include/src/: CMakeLists.txt  main.cpp  scheduler.cpp  scheduler.h
include/src/algorithms/: aging.cpp  aging.h  fb1.cpp  fb1.h  fb2i.cpp  fb2i.h  fcfs.cpp  fcfs.h  hrrn.cpp  hrrn.h  rr.cpp  rr.h  spn.cpp  spn.h  srt.cpp  srt.h
